# Cloud-Service-File-Sync

./: ARCHITECTURE.md  FileSyncPrototype.sln  README.md  SUBMISSION_CHECKLIST.md
scripts/: register-context-menu.ps1  setup-localstack.ps1
src/FileSync.App/: App.xaml  App.xaml.cs  FileSync.App.csproj  MainViewModel.cs  MainWindow.xaml  MainWindow.xaml.cs  appsettings.json
src/FileSync.Core/: FileSync.Core.csproj  Interop.cs  Logging.cs  MetadataStore.cs  Models.cs  S3SyncService.cs  SyncCoordinator.cs
src/FileSync.Interop.Native/: CMakeLists.txt  FileSyncInteropNative.cpp  FileSyncInteropNative.vcxproj
src/tools/FileSyncUploader/: FileSyncUploader.csproj  Program.cs
